# vnumpy2

./: README.md  pyproject.toml
cmake/custom/: fetch_mrcpp.cmake  fetch_pybind11.cmake
docs/notebooks/: BoundingBox.ipynb  PCMSolvent.ipynb  beryllium_atom.ipynb  function_representations.ipynb  harmonic_oscillator_evolution.ipynb  helium_atom.ipynb  helmholtz_equation.ipynb  hydrogen_atom.ipynb  introduction.ipynb  multiwavelets.ipynb  poisson_equation.ipynb
src/vampyr/: __init__.py  environ.py  export_vampyr.cpp
src/vampyr/functions/: functions.h  gaussians.h
src/vampyr/operators/: convolutions.h  derivatives.h
src/vampyr/tests/: test_arithmetics_1d.py  test_arithmetics_3d.py  test_complex.py  test_convolutions_1d.py  test_convolutions_3d.py  test_derivatives_1d.py  test_derivatives_3d.py  test_function_map_1d.py  test_function_map_3d.py  test_gauss_1d.py  test_gauss_3d.py  test_gentle_1d.py  test_grids_and_project_1d.py  test_grids_and_project_3d.py  test_mra_1d.py  test_mra_3d.py  test_projector1d.py  test_projector3d.py  test_time_evolution_1d.py  test_trees_1d.py  test_trees_3d.py
src/vampyr/treebuilders/: PyProjectors.h  applys.h  arithmetics.h  maps.h  project.h
src/vampyr/trees/: trees.h  world.h
