[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "vampyr"
version = "0.3a0"
description = "Python bindings for the MRCPP library"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.scikit-build]
# Minimum CMake version required
cmake.version = ">=3.17"

# Explicitly specify the package directory
wheel.packages = ["src/vampyr"]

# Pass the necessary CMake arguments
# We keep the install directory definition to match the CMakeLists.txt expectation
cmake.define = { PYMOD_INSTALL_FULLDIR = "vampyr" }

[tool.pytest.ini_options]
testpaths = ["src/vampyr/tests"]
addopts = "-rws"
norecursedirs = [
  "env",
  ".direnv",
  "venv",
  ".env",
  ".venv",
  "docs",
  ".eggs",
  ".git",
]

[tool.isort]
profile = "black"
